tests/test129.rael.exp
Error [5:8]: Invalid operation (+) on types
| log {} + :do_blame()
|        ^
