tests/test129.rael
:0do_blame routine() {
    blame "haha"
}

log {} + :do_blame()
